--- a/components/modal/modal.module.css
+++ b/components/modal/modal.module.css
@@ -1,4 +1,5 @@
 .modalBackdrop {
+  pointer-events: auto;
   position: fixed;
   inset: 0;
   z-index: 9999;
@@ -7,6 +8,7 @@
 }
 
 .modal {
+  pointer-events: auto;
   position: fixed;
   inset: 0;
   z-index: 99999;
